# dp-trabalho

./: .gitignore  README.md  pyproject.toml
scripts/: download_loveda.sh  make_notebook.py  make_standalone_notebook.py
src/: loveda_segmentation.py
