[project]
name = "loveda-transfer-learning"
version = "0.1.0"
description = "Segmentacao semantica LoveDA com U-Net e Transfer Learning"
requires-python = ">=3.10,<3.13"
dependencies = [
    "albumentations>=1.4.24",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.0",
    "nbformat>=5.10.4",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0.84",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "segmentation-models-pytorch>=0.3.4",
    "timm>=1.0.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.66.0",
]
